Fix unwanted nasty page drag on mobile

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 a {
